--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "def attendance_with_friends(advertising):\n",
-    "    retu"
+    "    return int(advertising*1.5) "
    ]
   },
   {
